# neo

./: .gitignore  CLAUDE.md  pyproject.toml
agents/: PIPELINE.md
agents/designer/: AGENT.md  concept.md  figma_spec.md  tokens.md
agents/fact_checker/: AGENT.md  company_profile.md
agents/marketer/: AGENT.md  competitor_analysis.md  recommendations.md  review.md
agents/project_manager/: AGENT.md  stage2_review.md
agents/seo_specialist/: AGENT.md  seo_recommendations.md
agents/shared/requirements/: brief.md
agents/tech_lead/: AGENT.md  tech_review.md  wp_requirements.md
prototype/: article.html  author.html  category.html  index.html  promo.html
prototype/css/: styles.css
